Spacing fix

--- a/Portfolio/css/custom.css
+++ b/Portfolio/css/custom.css
@@ -46,11 +46,11 @@ body{
 }
 
 .spacer {
-    padding-bottom: 218px;
+    margin-top: 260px;
 }
 
 .spacer2{
-    margin-top: 270px;
+    margin-top: 320px;
 }
 
 .successText{
